default/objects/Feedback_Version__c/Feedback_Version__c.object-meta.xml
<CustomObject>
    <description>The contents of a Feedback Item at one point in time.</description>
    <label>(Deprecated) Feedback Item Version</label>
    <nameField>
        <displayFormat>Feedback Version {0}</displayFormat>
        <label>Feedback Version #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>(Deprecated) Feedback Item Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>