default/objects/Feedback_Version__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <description>The content of this Feedback Item Version.</description>
    <label>Content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>