default/objects/Feedback_Version__c/fields/Feedback_Item__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Item__c</fullName>
    <description>The Feedback Item of which this is a version.</description>
    <label>Feedback Item</label>
    <referenceTo>Feedback__c</referenceTo>
    <relationshipLabel>Versions</relationshipLabel>
    <relationshipName>Versions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>