default/objects/Feedback_Version__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>The version number of this Feedback Item Version.</description>
    <label>Version</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>